--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rollup -c",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "deploy-storybook": "npm run build-storybook && gh-pages -d storybook-static"
   },
   "repository": {
@@ -30,23 +30,36 @@
   "homepage": "https://github.com/Ganeeral/ui-kit-heleket#readme",
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@chromatic-com/storybook": "^4.1.1",
     "@rollup/plugin-terser": "^0.3.0",
     "@rollup/plugin-typescript": "^11.0.0",
     "@rollup/plugin-url": "^8.0.1",
+    "@storybook/addon-a11y": "^9.1.3",
     "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-docs": "^9.1.3",
     "@storybook/addon-essentials": "^6.5.13",
     "@storybook/addon-interactions": "^6.5.13",
-    "@storybook/addon-links": "^6.5.13",
-    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/addon-links": "^9.1.3",
+    "@storybook/addon-vitest": "^9.1.3",
+    "@storybook/builder-webpack5": "^9.1.3",
     "@storybook/manager-webpack5": "^6.5.15",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.5.15",
+    "@storybook/react": "^9.1.3",
+    "@storybook/react-vite": "^9.1.3",
     "@storybook/testing-library": "^0.0.13",
     "@svgr/rollup": "^6.5.1",
     "@svgr/webpack": "^6.5.1",
-    "@types/react": "^18.0.27",
+    "@types/glob": "^8.1.0",
+    "@types/hast": "^3.0.4",
+    "@types/is-function": "^1.0.3",
+    "@types/mdast": "^4.0.4",
+    "@types/node": "^24.3.0",
+    "@types/pretty-hrtime": "^1.0.3",
+    "@types/react": "^18.3.24",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "5.33.0",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "babel-loader": "^8.3.0",
     "eslint": "^8.32.0",
     "eslint-config-standard-with-typescript": "^31.0.0",
@@ -54,15 +67,21 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-storybook": "^9.1.3",
     "gh-pages": "^5.0.0",
+    "playwright": "^1.55.0",
+    "prop-types": "^15.8.1",
     "rollup": "^3.10.1",
     "rollup-plugin-dts": "^5.1.1",
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.91.0",
+    "storybook": "^9.1.3",
     "typescript": "^4.9.4",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
-    "react": "^17.0.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
