--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,28 @@
 {
   "compilerOptions": {
     "baseUrl": "./src",
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "ES2017",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "outDir": "dist",
+    "declaration": true,
+    "declarationDir": "dist/types",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
     "strict": true,
-    "skipLibCheck": true,
-    "noImplicitAny": true,
+    "noFallthroughCasesInSwitch": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "module": "ESNext",
-    "declaration": true,
-    "declarationDir": "types",
+    "jsx": "react-jsx",
+    "skipLibCheck": true,
     "sourceMap": false,
-    "outDir": "dist",
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "noEmit": true,
-    "jsx": "react",
-    "strictNullChecks": false
-  }
+    "noEmit": false
+  },
+  "paths": {
+    "core/*": ["core/*"]
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", "example", "**/*.test.tsx"]
 }
