--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/Ganeeral"
   },
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "dist/esm/index.js",
   "module": "dist/cjs/index.js",
@@ -27,6 +27,9 @@
   "bugs": {
     "url": "https://github.com/Ganeeral/ui-kit-heleket/issues"
   },
+  "sideEffects": [
+    "./dist/esm/index.css"
+  ],
   "homepage": "https://github.com/Ganeeral/ui-kit-heleket#readme",
   "devDependencies": {
     "@babel/core": "^7.20.12",
