--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/Ganeeral"
   },
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -99,6 +99,7 @@
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "rollup-plugin-preserve-directives": "^0.4.0",
     "rollup-plugin-svgsprite-generator": "^1.1.0"
   }
 }
