--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/Ganeeral"
   },
-  "version": "1.0.18",
+  "version": "1.0.19",
   "description": "",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -100,6 +100,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup-plugin-preserve-directives": "^0.4.0",
-    "rollup-plugin-svgsprite-generator": "^1.1.0"
+    "rollup-plugin-svgsprite-generator": "^1.1.0",
+    "vite-plugin-static-copy": "^3.1.2"
   }
 }
