--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/Ganeeral"
   },
-  "version": "1.0.19",
+  "version": "1.0.20",
   "description": "",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -16,7 +16,8 @@
     "build": "vite build",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "deploy-storybook": "npm run build-storybook && gh-pages -d storybook-static"
+    "deploy-storybook": "npm run build-storybook && gh-pages -d storybook-static",
+    "postinstall": "node dist/scripts/copy-sprites.js"
   },
   "repository": {
     "type": "git",
@@ -87,7 +88,8 @@
     "rollup-plugin-svg-sprite-deterministic": "^2.0.0",
     "sass": "^1.91.0",
     "storybook": "^9.1.3",
-    "typescript": "^4.9.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
     "vite": "^7.1.3",
     "vite-plugin-dts": "^4.5.4",
