--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/Ganeeral"
   },
-  "version": "1.0.37",
+  "version": "1.0.38",
   "description": "",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -85,5 +85,8 @@
     "react": "^18 || ^19.1.0",
     "react-dom": "^18 || ^19.1.0",
     "vite-plugin-static-copy": "^3.1.2"
+  },
+  "dependencies": {
+    "framer-motion": "^12.23.12"
   }
 }
