--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/Ganeeral"
   },
-  "version": "1.0.38",
+  "version": "1.0.41",
   "description": "",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -87,6 +87,9 @@
     "vite-plugin-static-copy": "^3.1.2"
   },
   "dependencies": {
-    "framer-motion": "^12.23.12"
+    "@tanstack/react-query": "^5.85.5",
+    "framer-motion": "^12.23.12",
+    "js-cookie": "^3.0.5",
+    "react-toastify": "^11.0.5"
   }
 }
